# anisotropic-screen-meshing

./: .gitmodules  CMakeLists.txt  README.md
docker/: Dockerfile  build.sh  run.sh
src/: CMakeLists.txt  main.cpp
src/rendering/: TorchMesh.h  nvdiffrast.h
src/smp/algorithms/: NormalScreenRemeshing.h  ScreenDifferentialGeometry.h  ScreenMeshing.h  TightIntegration.h
src/smp/structures/: updatable_queue.h
src/utility/: ImageLoader.h
